an attempt to fix stretched images

--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ figure {
 }
 
 img {
-    border-style: none
+    border-style: none;
 }
 
 code,kbd,pre,samp {
@@ -232,7 +232,8 @@ hr {
 
 .w3-image {
     max-width: 100%;
-    height: 500px
+    height: 500px;
+    object-fit: cover;
 }
 
 img {
